# Trixieverse

./: .env  .env.example  .gitignore  AUTH_SYSTEM_IMPLEMENTATION.md  BUILD_SUMMARY_DAY1.md  COACHOS_LAUNCH_GUIDE.md  COMPLETION_CHECKLIST.md  COPILOT_INSTRUCTIONS_GUIDE.md  DAY1_PROGRESS.md  DAY1_QUICK_START.md  DAY1_SETUP_GUIDE.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  DISCORD_BOT_SETUP.md  DISCORD_SETUP_GUIDE.md  Dockerfile  EXECUTION_START.md  EXPERT_LAUNCH_READINESS_REVIEW.md  FINAL_PROJECT_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  LAUNCH_READINESS_SCORECARD.md  LIVE_CHECKLIST.md  MANUS_SESSION_LOG.md  MARKETING_REFINEMENT_SUMMARY.md  MARKETING_STRATEGY.md  MOBILE_API_INTEGRATION.md  PERFORMANCE_AUDIT_REPORT.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERMANENT_DEPLOYMENT_GUIDE.md  PHASE_1_IMPLEMENTATION_COMPLETE.md  PHASE_1_SETUP_GUIDE.md  PLATFORM_STRATEGY.md  PREDICTIVE_RANK_CLIMBING_VISION.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_SETUP.md  PROFESSIONAL_DEPLOY_GUIDE.md  PROFESSIONAL_REVIEW.md  PROJECT_SUMMARY.md  QUICK_START.md  (+16 more)
.github/: COPILOT_INSTRUCTIONS.md  act-history.json  copilot-instructions.md
android-app/: gradle.properties  settings.gradle.kts
backend-local/: ares_engine.py  main.py  memory_store.py  trend_analyzer.py
client/: index.html
discord-bot/: bot.ts
firstwebsajt/: DEPLOYMENT.md  FIRSTWEBSAJT_README.md  LOCAL_SETUP.md  package.json  pnpm-lock.yaml
ml/: main.py  pyproject.toml
ml/models/: champion_recommender.py
ml/services/: blueprint_service.py  feature_engineering.py  riot_data_ingestion.py
(+229 files in other folders)
